[gd_scene load_steps=17 format=3 uid="uid://bibg3h6b8787w"]

[ext_resource type="Texture2D" uid="uid://buk7p18ney78g" path="res://assets/character.png" id="1_de2i3"]
[ext_resource type="Script" path="res://character.gd" id="1_grc1o"]
[ext_resource type="Shader" path="res://poison.gdshader" id="2_5a5xn"]
[ext_resource type="Shader" path="res://healing.gdshader" id="2_u6250"]
[ext_resource type="PackedScene" uid="uid://cu4b76nvj43bn" path="res://character_stats.tscn" id="3_6l03o"]
[ext_resource type="PackedScene" uid="uid://ew64v7v1l0j5" path="res://hurtbox.tscn" id="3_h7cqb"]
[ext_resource type="Texture2D" uid="uid://cxmpyu348lk16" path="res://assets/generic1x1.png" id="4_7hn0p"]
[ext_resource type="Script" path="res://weapon_hitbox.gd" id="5_e4wfj"]
[ext_resource type="Script" path="res://weapon.gd" id="5_ua6m2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7l6t0"]
resource_local_to_scene = true
shader = ExtResource("2_5a5xn")
shader_parameter/active = false

[sub_resource type="CircleShape2D" id="CircleShape2D_rb226"]
radius = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_whs8n"]
radius = 16.0
height = 64.0

[sub_resource type="Animation" id="Animation_63i46"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xemxp"]
resource_name = "heal"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_u6250")]
}

[sub_resource type="Animation" id="Animation_00t1l"]
resource_name = "poison"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_5a5xn")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wvwbm"]
_data = {
"RESET": SubResource("Animation_63i46"),
"heal": SubResource("Animation_xemxp"),
"poison": SubResource("Animation_00t1l")
}

[node name="Character" type="CharacterBody2D"]
script = ExtResource("1_grc1o")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_7l6t0")
texture = ExtResource("1_de2i3")
offset = Vector2(32, 32)

[node name="CharacterStats" parent="." instance=ExtResource("3_6l03o")]

[node name="Weapon" type="Sprite2D" parent="."]
z_index = 3
texture = ExtResource("4_7hn0p")
script = ExtResource("5_ua6m2")
metadata/_edit_group_ = true

[node name="WeaponHitbox" type="Area2D" parent="Weapon"]
collision_layer = 4
collision_mask = 0
script = ExtResource("5_e4wfj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon/WeaponHitbox"]
shape = SubResource("CircleShape2D_rb226")

[node name="Hurtbox" parent="." instance=ExtResource("3_h7cqb")]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(32, 32)
shape = SubResource("CapsuleShape2D_whs8n")

[node name="HPLabel" type="Label" parent="."]
offset_top = 60.0
offset_right = 65.0
offset_bottom = 83.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "10.0 / 10"
horizontal_alignment = 1

[node name="DamageLabel" type="Label" parent="."]
offset_top = 24.0
offset_right = 20.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wvwbm")
}

[node name="StatusLabel" type="Label" parent="."]
offset_left = -16.0
offset_top = 40.0
offset_right = 16.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0.423529, 0, 0.439216, 1)
horizontal_alignment = 1

[connection signal="health_changed" from="CharacterStats" to="." method="_on_character_stats_health_changed"]
[connection signal="max_health_changed" from="CharacterStats" to="." method="_on_character_stats_max_health_changed"]
[connection signal="no_health" from="CharacterStats" to="." method="_on_character_stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Hurtbox"]
